--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.gxws</groupId>
 	<artifactId>tool-test</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-RELEASE</version>
 	<properties>
 		<!-- logging framework -->
 		<version.slf4j>1.7.12</version.slf4j>
@@ -14,7 +14,7 @@
 		<!-- test framework -->
 		<version.testng>6.9.4</version.testng>
 
-		<version.tool.common>1.2.0-SNAPSHOT</version.tool.common>
+		<version.tool.common>1.2.0-RELEASE</version.tool.common>
 	</properties>
 	<dependencies>
 
